--- a/ui/styles/sass/modules/_main.scss
+++ b/ui/styles/sass/modules/_main.scss
@@ -11,7 +11,7 @@
 
   @include at-query($min, $mq-large) {
     padding-top: 3%;
-    margin-bottom: 30px;
+    margin-bottom: 0;
     padding-left: $gutter;
     padding-right: $gutter;
   }
